--- a/config_example.ini
+++ b/config_example.ini
@@ -1,5 +1,5 @@
 [credentials]
-BOT_API_KEY = 'YOUR_API_KEY'
+BOT_API_KEY = YOUR_API_KEY
 
 [files]
-UPLOAD_FOLDER = "C:/GarageSale/uploaded_files/lots/"
+UPLOAD_FOLDER = C:/GarageSale/uploaded_files/lots/
